--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
   delegate_to: '{{ inventory_hostname }}'
   wait_for:
     port: '{{ cassandra_thrift_client_port }}'
-    host: '{{ local_address }}'
+    host: '{{ private_address }}'
     timeout: 1
   register: cassandra_thrift_client_port_status
   ignore_errors: yes
@@ -13,7 +13,7 @@
   delegate_to: '{{ inventory_hostname }}'
   wait_for:
     port: '{{ cassandra_jmx_port }}'
-    host: '{{ local_address }}'
+    host: '{{ private_address }}'
     timeout: 1
   register: cassandra_jmx_port_status
   ignore_errors: yes
@@ -22,7 +22,7 @@
   delegate_to: '{{ inventory_hostname }}'
   wait_for:
     port: '{{ cassandra_cql_native_port }}'
-    host: '{{ local_address }}'
+    host: '{{ private_address }}'
     timeout: 1
   register: cassandra_cql_native_port_status
   ignore_errors: yes
@@ -31,7 +31,7 @@
   delegate_to: '{{ inventory_hostname }}'
   wait_for:
     port: '{{ cassandra_non_ssl_gossip_port }}'
-    host: '{{ local_address }}'
+    host: '{{ private_address }}'
     timeout: 1
   register: cassandra_non_ssl_port_status
   ignore_errors: yes
@@ -41,7 +41,7 @@
   delegate_to: '{{ inventory_hostname }}'
   wait_for:
     port: '{{ cassandra_ssl_gossip_port }}'
-    host: '{{ local_address }}'
+    host: '{{ private_address }}'
     timeout: 1
   register: cassandra_ssl_port_status
   ignore_errors: yes
